[[bin]]
name = "benson"
path = "src/main.rs"

[package]
name = "benson"
version = "1.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
cli = { package = "benson-cli", path = "cli" }
futures = "0.1.29"
ctrlc = { version = "3.1.3", features = ["termination"] }

[build-dependencies]
vergen = "3.0.4"

[workspace]
members = [
	"cli",
	"executor",
	"primitives",
	"rpc",
	"rpc-client",
	"runtime",
	"testing",
]

[badges]
circle-ci = { repository = "ng8eke/benson", branch = "develop" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "ng8eke/benson" }
is-it-maintained-open-issues = { repository = "ng8eke/benson" }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
