[package]
name = "benson-cli"
version = "2.0.0-rc1"
authors = ["Annie Lai <ng8eke@163.com>"]
description = "Benson Box implementation in Rust."
build = "build.rs"
edition = "2018"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
serde = { version = "1.0.102", features = ["derive"] }
structopt = "0.3.8"
url = "2.2.2"

sc-authority-discovery = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-chain-spec = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-cli = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain", features = ["wasmtime"] }
sp-core = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-executor = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain", features = ["wasmtime"] }
sc-service = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain", features = ["wasmtime"] }
sp-inherents = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-transaction-pool = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-transaction-pool = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-authority-discovery = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-consensus-babe = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-consensus-babe = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-consensus = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-consensus-epochs = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-consensus = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-network = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-finality-grandpa = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-finality-grandpa = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-client-api = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-runtime = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }

# These dependencies are used for the node RPCs
jsonrpc-core = "15.1.0"
sc-rpc = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-api = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-rpc-api = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-blockchain = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-block-builder = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-keystore = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-utils = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-basic-authorship = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-consensus-slots = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-telemetry = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-sync-state-rpc = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
substrate-frame-rpc-system = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-consensus-babe-rpc = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-finality-grandpa-rpc = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-keystore = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
frame-benchmarking-cli = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }

# benson dependencies
benson-primitives = { path = "../primitives" }
benson-runtime = { path = "../runtime" }
crml-eth-bridge = { path = "../crml/eth-bridge" }
# benson custom RPCs
crml-cennzx-rpc = { path = "../crml/cennzx/rpc" }
crml-generic-asset = { path = "../crml/generic-asset" }
crml-generic-asset-rpc = { path = "../crml/generic-asset/rpc" }
crml-governance-rpc = { path = "../crml/governance/rpc" }
crml-nft-rpc = { path = "../crml/nft/rpc" }
crml-staking-rpc = { path = "../crml/staking/rpc" }
crml-support = { path = "../crml/support" }
crml-transaction-payment-rpc = { path = "../crml/transaction-payment/rpc" }
crml-transaction-payment = { path = "../crml/transaction-payment" }
ethy-gadget = { path = "../ethy-gadget" }
ethy-gadget-rpc = { path = "../ethy-gadget/rpc" }

pallet-im-online = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "ecdsa-testing-2" }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-keyring = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sp-timestamp = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
sc-service-test = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
frame-system = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }
tempfile = "3.1.0"

[build-dependencies]
substrate-build-script-utils = { branch = "ecdsa-testing-2", git = "https://github.com/plugblockchain/plug-blockchain" }

[features]
default = []
# Uses integration test config for quicker staking eras + epochs
quick_staking = [
	"benson-runtime/integration_config"
]
runtime-benchmarks = [
	"benson-runtime/runtime-benchmarks",
]
