[package]
name = "benson-cli"
version = "2.0.0-rc2"
authors = ["Annie Lai <ng8eke@163.com>"]
description = "Benson Box implementation in Rust."
build = "build.rs"
edition = "2018"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
serde = { version = "1.0.102", features = ["derive"] }
structopt = "0.3.8"
url = "2.2.2"

sc-authority-discovery = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-chain-spec = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-cli = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate", features = ["wasmtime"] }
sp-core = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-executor = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate", features = ["wasmtime"] }
sc-service = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate", features = ["wasmtime"] }
sp-inherents = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-transaction-pool = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-transaction-pool = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-authorship = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-authority-discovery = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-consensus-babe = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-consensus-babe = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-consensus = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-consensus-epochs = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-consensus-uncles = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-consensus = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-network = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-finality-grandpa = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-finality-grandpa = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-client-api = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-runtime = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-timestamp = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }

# These dependencies are used for the node RPCs
jsonrpc-core = "15.1.0"
sc-rpc = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-api = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-rpc-api = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-blockchain = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-block-builder = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-keystore = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-utils = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-basic-authorship = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-consensus-slots = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-telemetry = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-sync-state-rpc = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
substrate-frame-rpc-system = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-consensus-babe-rpc = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-finality-grandpa-rpc = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-keystore = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
frame-benchmarking-cli = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }

# benson dependencies
benson-primitives = { path = "../primitives" }
benson-runtime = { path = "../runtime" }
crml-eth-bridge = { path = "../crml/eth-bridge" }
# benson custom RPCs
crml-cennzx-rpc = { path = "../crml/cennzx/rpc" }
crml-generic-asset = { path = "../crml/generic-asset" }
crml-generic-asset-rpc = { path = "../crml/generic-asset/rpc" }
crml-governance-rpc = { path = "../crml/governance/rpc" }
crml-nft-rpc = { path = "../crml/nft/rpc" }
crml-staking-rpc = { path = "../crml/staking/rpc" }
crml-support = { path = "../crml/support" }
crml-transaction-payment-rpc = { path = "../crml/transaction-payment/rpc" }
crml-transaction-payment = { path = "../crml/transaction-payment" }
ethy-gadget = { path = "../ethy-gadget" }
ethy-gadget-rpc = { path = "../ethy-gadget/rpc" }

pallet-im-online = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba" }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-keyring = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sp-timestamp = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
sc-service-test = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
frame-system = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }
tempfile = "3.1.0"

[build-dependencies]
substrate-build-script-utils = { rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", git = "https://github.com/benson/substrate" }

[features]
default = []
# Uses integration test config for quicker staking eras + epochs
quick_staking = [
	"benson-runtime/integration_config"
]
runtime-benchmarks = [
	"benson-runtime/runtime-benchmarks",
]
