[package]
name = "benson-executor"
version = "1.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"

[dependencies]
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "1.0.0" }
runtime-io = { package = "sr-io", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
state-machine = { package = "substrate-state-machine", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
substrate-executor = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
primitives = { package = "substrate-primitives", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
trie = { package = "substrate-trie", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
benson-primitives = { path = "../primitives" }
benson-runtime = { path = "../runtime" }

[dev-dependencies]
benson-testing = { path = "../testing" }
test-client = { package = "substrate-test-client", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
sr-primitives = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
support = { package = "srml-support", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
generic-asset = { package = "srml-generic-asset", git = "https://github.com/plugblockchain/plug-blockchain", default-features = false, branch = "1.0.0-rc1" }
transaction-payment = { package = "srml-transaction-payment", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
session = { package = "srml-session", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
system = { package = "srml-system", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
timestamp = { package = "srml-timestamp", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
treasury = { package = "srml-treasury", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
contracts = { package = "srml-contracts", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
grandpa = { package = "srml-grandpa", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
indices = { package = "srml-indices", git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc1" }
wabt = "0.9.2"

[features]
benchmarks = []
stress-test = []
