[package]
name = "benson-primitives"
version = "1.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"

[dependencies]
codec = { version = "1.3.5", package = "parity-scale-codec", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/plugblockchain/plug-blockchain", default-features = false, rev = "2.0.2" }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", default-features = false, rev = "2.0.2" }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", default-features = false, rev = "2.0.2" }
sp-std = { git = "https://github.com/plugblockchain/plug-blockchain", default-features = false, rev = "2.0.2" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
]
