[package]
name = "benson-primitives"
version = "2.0.0-rc2"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
frame-support = { git = "https://github.com/benson/substrate", default-features = false, rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735" }
sp-api = { git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735", default-features = false }
sp-application-crypto = { git = "https://github.com/benson/substrate", rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735", default-features = false }
sp-core = { git = "https://github.com/benson/substrate", default-features = false, rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735" }
sp-runtime = { git = "https://github.com/benson/substrate", default-features = false, rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735" }
sp-std = { git = "https://github.com/benson/substrate", default-features = false, rev = "1b0b2ef54e83b2352e139581af29ca6eb2691735" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
]
try-runtime = ["frame-support/try-runtime"]
