[package]
name = "benson-primitives"
version = "2.0.0-rc4"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
frame-support = { git = "https://github.com/benson/substrate", default-features = false, rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba" }
sp-api = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
sp-application-crypto = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
sp-core = { git = "https://github.com/benson/substrate", default-features = false, rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba" }
sp-runtime = { git = "https://github.com/benson/substrate", default-features = false, rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba" }
sp-std = { git = "https://github.com/benson/substrate", default-features = false, rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
]
try-runtime = ["frame-support/try-runtime"]
