[package]
name = "benson-rpc-client"
version = "1.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"

[dependencies]
benson-primitives = { path = "../primitives" }
sc-rpc = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.1" }
env_logger = "0.7.0"
futures = "0.1.29"
hyper = "0.12.35"
jsonrpc-core-client = { version = "14.0.3", features = ["http", "ws"] }
log = "0.4.8"
benson-rpc = { path = "../rpc" }
