[package]
name = "benson-rpc"
version = "1.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
repository = "https://github.com/ng8eke/benson"

[dependencies]
#third-party dependencies
jsonrpc-core = "14.0.3"

#benson dependencies
benson-primitives = { path = "../primitives" }
benson-runtime = { path = "../runtime" }
crml-cennzx-rpc = { path = "../crml/cennzx/rpc" }

#frame dependencies
pallet-contracts-rpc = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
pallet-generic-asset-rpc = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
pallet-transaction-payment-rpc = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
substrate-frame-rpc-system = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }

#primitives and client dependencies
sc-client = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sc-consensus-babe = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sc-consensus-babe-rpc = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sc-keystore = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sc-consensus-epochs = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sp-consensus-babe = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sp-api = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sp-transaction-pool = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sp-consensus = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
sp-blockchain = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc4.2" }
