[package]
name = "benson-testing"
version = "1.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
description = "Test utilities for Benson Box."
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0" }
wabt = "0.9.2"
benson-executor = { path = "../executor" }
benson-primitives = { path = "../primitives" }
benson-runtime = { path = "../runtime" }
crml-transaction-payment = { path="../crml/transaction-payment", default-features = false }
frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
pallet-contracts = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
pallet-grandpa = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
pallet-session = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
pallet-staking = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
sc-client = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
sc-client-db = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
sc-executor = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
sp-io = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
sp-keyring = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
substrate-test-client = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "1.0.0-rc2" }
