[package]
name = "crml-cennzx"
version = "2.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.102", optional = true }
benson-primitives = { path = "../../primitives", default-features = false }
crml-generic-asset = { path = "../generic-asset", default-features = false }
crml-support = { path = "../support", default-features = false }
frame-support = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "ecdsa-testing-2", default-features = false }
frame-system = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "ecdsa-testing-2", default-features = false }
frame-benchmarking = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "ecdsa-testing-2", default-features = false, optional = true }
sp-core = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "ecdsa-testing-2", default-features = false }
sp-io = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "ecdsa-testing-2", default-features = false }
sp-runtime = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "ecdsa-testing-2", default-features = false }
sp-std = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "ecdsa-testing-2", default-features = false }

[dev-dependencies]
benson-runtime = { path = "../../runtime" }
sp-keyring = { git = "https://github.com/plugblockchain/plug-blockchain", branch = "ecdsa-testing-2" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"benson-primitives/std",
	"crml-generic-asset/std",
	"crml-support/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking"
]
try-runtime = ["frame-support/try-runtime"]
