[package]
name = "crml-generic-asset"
version = "2.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/ng8eke/benson"
description = "A runtime module for managing ERC-20 like fungible assets"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.102", optional = true }
benson-primitives = { path = "../../primitives", default-features = false }
crml-support = { path = "../support", default-features = false }
frame-support = { git = "https://github.com/benson/substrate", rev = "86a3bab75c656f6f759dbd9e6513f314dc185abe", default-features = false }
frame-system = { git = "https://github.com/benson/substrate", rev = "86a3bab75c656f6f759dbd9e6513f314dc185abe", default-features = false }
frame-benchmarking = { git = "https://github.com/benson/substrate", rev = "86a3bab75c656f6f759dbd9e6513f314dc185abe", default-features = false, optional = true }
sp-runtime = { git = "https://github.com/benson/substrate", rev = "86a3bab75c656f6f759dbd9e6513f314dc185abe", default-features = false }
sp-std = { git = "https://github.com/benson/substrate", rev = "86a3bab75c656f6f759dbd9e6513f314dc185abe", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/benson/substrate", rev = "86a3bab75c656f6f759dbd9e6513f314dc185abe", default-features = false }
sp-core = { git = "https://github.com/benson/substrate", rev = "86a3bab75c656f6f759dbd9e6513f314dc185abe", default-features = false }

[features]
default = ["std"]
std =[
	"codec/std",
	"serde/std",
	"benson-primitives/std",
	"crml-support/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]
