[package]
name = "crml-governance"
version = "2.0.0"
authors = ["Annie Lai <ng8eke@163.com>"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/ng8eke/benson"
description = "A runtime module for decentralized governance of the Benson protocol"

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false }
serde = { version = "1.0.102", optional = true }
benson-primitives = { path = "../../primitives", default-features = false }
frame-support = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
frame-system = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }
sp-std = { git = "https://github.com/benson/substrate", rev = "d05b61e9b948621416a3c6eea2e10fd2f1b62aba", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",
	"benson-primitives/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
]
